Issue #SB-21066 Alignment issue - text too close to the box (#146)

--- a/src/client/src/assets/styles/global.scss
+++ b/src/client/src/assets/styles/global.scss
@@ -260,3 +260,6 @@ app-workspace {
 .footer-fix{
   padding-bottom: calculateRem(64px);
 }
+.hover-meta-info{
+  padding: 0 calculateRem(16px);
+}
